update header.tex (change in itemize bullet points)

--- a/header.tex
+++ b/header.tex
@@ -74,7 +74,7 @@
 % \setlength{\leftmargini}{0em}
 \setbeamercolor{page number in head/foot}{fg=gray}
 \setbeamertemplate{footline}[frame number]
-\setbeamertemplate{itemize items}[circle]
+%\setbeamertemplate{itemize items}[circle]
 \setbeamertemplate{enumerate items}[circle]
 \setbeamertemplate{sections/subsections in toc}[circle]
 \setbeamertemplate{frametitle continuation}[from second][(cont.)]
