--- a/exercise/exercise2_worked-out.ipynb
+++ b/exercise/exercise2_worked-out.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "9bb695be-8532-4c0f-bffa-d16fb2b42346",
    "metadata": {},
    "outputs": [
@@ -33,17 +33,50 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b9161038-34bb-43a8-8b25-0f82e5024e6a",
+   "metadata": {},
+   "source": [
+    "### 2. Given a score, print its letter grade (80 and above is A, 60 and above is B, else F)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "55ece080-a245-4cc7-a3a8-89aa47e731c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "B grade\n"
+     ]
+    }
+   ],
+   "source": [
+    "score = 75\n",
+    "\n",
+    "if score >= 80:\n",
+    "    print(\"A grade\")\n",
+    "elif (score >= 60) and (score < 80):\n",
+    "    print(\"B grade\")\n",
+    "else:\n",
+    "    print(\"F grade\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cd10de3e-b6cd-46dd-bb72-d80a5e72a7ca",
    "metadata": {},
    "source": [
-    "### 2. Find the $n^{th}$ term of the following series using a `while` loop:\n",
+    "### 3. Find the $n^{th}$ term of the following series using a `while` loop:\n",
     "\n",
     "2 + 5 + 8 + 11 + 14 + ..."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "aa347038-529e-435e-b863-88456c5f063e",
    "metadata": {},
    "outputs": [
@@ -73,12 +106,12 @@
    "id": "20328fd2-fe5e-4b71-9bfe-7ebaf64040e3",
    "metadata": {},
    "source": [
-    "### 3. Use a `while` loop to find the sum of some numbers in a list"
+    "### 4. Use a `while` loop to find the sum of some numbers in a list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "67eabedb-7bfd-4682-a4b3-43901204d737",
    "metadata": {},
    "outputs": [
@@ -106,12 +139,12 @@
    "id": "078c7675-e958-4ce9-b9ff-87b7a6e39a5a",
    "metadata": {},
    "source": [
-    "### 4. Use a `for` loop to print the square of some numbers"
+    "### 5. Use a `for` loop to print the square of some numbers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "c9b15e70-a806-4de0-ac83-8746ffe8d5c9",
    "metadata": {},
    "outputs": [
@@ -156,12 +189,12 @@
    "id": "9fcf2814-bda6-4237-98d6-50ba713f1007",
    "metadata": {},
    "source": [
-    "### 5. Use a `for` loop to replace the values of a list with their squares (do not create a new list)"
+    "### 6. Use a `for` loop to replace the values of a list with their squares (do not create a new list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "b71a3100-d806-4e7f-86c2-37ae7849c438",
    "metadata": {},
    "outputs": [
@@ -171,7 +204,7 @@
        "[4, 6.25, 9, 16, 30.25]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,12 +222,12 @@
    "id": "5af68f57-9e04-4047-aa0f-d7a05cefb30f",
    "metadata": {},
    "source": [
-    "### Given two lists - one representing the number of cylinders in car engines and another representing the milage of the corresponding engine, find the cars that have 4 cylinders and more than 20 milage."
+    "### 7. Given two lists - one representing the number of cylinders in car engines and another representing the milage of the corresponding engine, find the cars that have 4 cylinders and more than 20 milage."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "72d8e3e8-610d-4a01-b9b6-85c3176acae0",
    "metadata": {},
    "outputs": [
@@ -204,7 +237,7 @@
        "[2, 2, 2, 4, 4, 4, 6, 6, 6]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "6bc4245a-9b97-42df-8365-57fe86803110",
    "metadata": {},
    "outputs": [],
@@ -226,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "9bf95f44-2b54-4e8f-9075-ed698366aaa3",
    "metadata": {},
    "outputs": [
