--- a/09_oop.ipynb
+++ b/09_oop.ipynb
@@ -240,7 +240,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "upMJzNYPuEHU",
-        "outputId": "2f632f8a-9699-4389-e492-2fa0431c6797"
+        "outputId": "09173888-629f-463d-dbd7-945d7b2cc015"
       },
       "execution_count": 4,
       "outputs": [
@@ -265,7 +265,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MA4FKiOyuJiF",
-        "outputId": "e3e43c0e-382c-467d-b98f-3269c96fabf9"
+        "outputId": "349773e2-d92d-4702-bfd0-40fef79e11a4"
       },
       "execution_count": 5,
       "outputs": [
@@ -303,7 +303,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0L3_16wsuj8m",
-        "outputId": "0f70fdd0-e810-4952-f491-d2407129fc74"
+        "outputId": "c98d5248-548d-4891-96ae-f43523c5af5b"
       },
       "execution_count": 7,
       "outputs": [
@@ -329,7 +329,7 @@
           "height": 35
         },
         "id": "kY0OEFICZx-Z",
-        "outputId": "8f2dd804-e70b-4be4-c011-74fb307d417f"
+        "outputId": "fab3e534-eab5-4ceb-e84e-d4a8b7dace02"
       },
       "execution_count": 8,
       "outputs": [
@@ -360,7 +360,7 @@
           "height": 35
         },
         "id": "lWsqdDAzZ0lz",
-        "outputId": "c0074559-30db-4405-d36a-af20392dac15"
+        "outputId": "810dad17-d51d-4474-912e-015f20dd9212"
       },
       "execution_count": 9,
       "outputs": [
@@ -391,7 +391,7 @@
           "height": 35
         },
         "id": "whIZBdCauBST",
-        "outputId": "4656b1b4-3a3d-4f9e-a1a1-b8b0f82bf3de"
+        "outputId": "e5c2d210-a94f-4ae2-a198-06ce8195063a"
       },
       "execution_count": 10,
       "outputs": [
@@ -444,7 +444,7 @@
           "height": 35
         },
         "id": "OVqMfpkCQ73Z",
-        "outputId": "a8afff60-3373-4dc9-eb87-648030189960"
+        "outputId": "7bf7f642-9db7-485b-9b39-20f09950d371"
       },
       "execution_count": 13,
       "outputs": [
@@ -474,7 +474,7 @@
           "height": 35
         },
         "id": "MwXEymy4Q99X",
-        "outputId": "8f5b95ca-ff87-411f-abf6-26da77744117"
+        "outputId": "da850326-5cce-4c66-f58a-10e8101da36e"
       },
       "execution_count": 14,
       "outputs": [
@@ -504,7 +504,7 @@
           "height": 35
         },
         "id": "83kCSqIXZ3Ba",
-        "outputId": "83845e98-4bda-4349-b0c5-f6831400f04b"
+        "outputId": "50b25f28-d037-4698-983b-792d7b8b4f20"
       },
       "execution_count": 15,
       "outputs": [
@@ -534,7 +534,7 @@
           "height": 35
         },
         "id": "gOxob5QtZ6Sj",
-        "outputId": "019f6ccc-44c9-4c1b-d047-e960fe2f2aba"
+        "outputId": "83cedeb4-125a-4f32-d4d8-b59a81cd46ea"
       },
       "execution_count": 16,
       "outputs": [
@@ -773,7 +773,7 @@
           "height": 35
         },
         "id": "vmQD30yPFJ1v",
-        "outputId": "3747c3d5-2822-439a-d44c-3e28170919c0"
+        "outputId": "ea199e9c-9ab0-4178-b0a9-f6aea9a3f178"
       },
       "execution_count": 19,
       "outputs": [
@@ -814,7 +814,7 @@
           "height": 35
         },
         "id": "onuiDet6FSUp",
-        "outputId": "a9145830-4216-473e-cb4a-77dfd5d434b6"
+        "outputId": "10837874-e8f9-4b5d-e8a4-95aaa91b3f9f"
       },
       "execution_count": 21,
       "outputs": [
@@ -844,7 +844,7 @@
           "height": 35
         },
         "id": "5vWBMjJ9YAB9",
-        "outputId": "db5fdd0e-ece6-4d8d-ac0f-7a7e459304b3"
+        "outputId": "fe3a2d5b-260a-4d26-c6ac-5e1147b65cbb"
       },
       "execution_count": 22,
       "outputs": [
@@ -870,7 +870,7 @@
       ],
       "metadata": {
         "id": "yFSqpmfeYHod",
-        "outputId": "6bbf405d-2165-4faa-9257-04f1be414dd6",
+        "outputId": "94e3561d-ab03-4774-bdad-850a57d401dc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -900,7 +900,7 @@
       ],
       "metadata": {
         "id": "KADtUm-uYKPB",
-        "outputId": "845e9c4d-711a-45f9-ecf9-3a372aa170e7",
+        "outputId": "23143aa0-9a0c-45e6-c092-f584f299d01c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -934,7 +934,7 @@
           "height": 35
         },
         "id": "5X1LoAntmjXh",
-        "outputId": "435f2543-9719-459e-f14f-a7666679a866"
+        "outputId": "0fecc9b4-72f2-427b-fa08-4907f2a54ea2"
       },
       "execution_count": 25,
       "outputs": [
@@ -984,7 +984,7 @@
           "height": 35
         },
         "id": "aBnLSS0Nm2hj",
-        "outputId": "60b0a26e-5153-4caf-fd1a-8ff50e721d65"
+        "outputId": "7c031ff9-aad8-4cf6-dace-6f6d90ec3457"
       },
       "execution_count": 27,
       "outputs": [
@@ -1073,7 +1073,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VH0GYjgMIr1J",
-        "outputId": "6ace67b3-ce17-45aa-925b-76b9b585bb90"
+        "outputId": "436114f4-cd53-45e6-a430-7fc1e8c723aa"
       },
       "execution_count": 29,
       "outputs": [
@@ -1097,7 +1097,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sISBlcrlItEs",
-        "outputId": "a6cf0684-1a12-4f57-c51e-29817c9cbb23"
+        "outputId": "b4ee3ba2-d5dc-4b74-a41b-68217df380a8"
       },
       "execution_count": 30,
       "outputs": [
@@ -1153,7 +1153,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AJhdoy6YJTzw",
-        "outputId": "4b580142-44ad-4198-e1fe-bec233f653f3"
+        "outputId": "34ef6395-94dd-4906-d0dd-befacba1e3c6"
       },
       "execution_count": 32,
       "outputs": [
@@ -1234,7 +1234,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1nTcAeofPgAB",
-        "outputId": "3cfe3f39-3d53-42a7-85ad-1a0af5e2f44c"
+        "outputId": "8c8f837b-3ec7-4375-82ab-e3271571cf0d"
       },
       "execution_count": 34,
       "outputs": [
@@ -1306,7 +1306,7 @@
           "height": 35
         },
         "id": "YLHMosPfQCI-",
-        "outputId": "677174d6-7854-46f7-e497-ac37e278c437"
+        "outputId": "da53074f-848d-4ba9-c8ef-5c70f163624b"
       },
       "execution_count": 37,
       "outputs": [
@@ -1335,7 +1335,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UKAr54dfP9Pe",
-        "outputId": "364aba13-6ac1-4d82-fd54-5c6f1e4b3f6e"
+        "outputId": "d2b0dff9-8a81-4ecb-b8df-1f55119d9234"
       },
       "execution_count": 38,
       "outputs": [
@@ -1359,7 +1359,7 @@
           "height": 35
         },
         "id": "wn3V8cb_QSRA",
-        "outputId": "26e080d2-1e3b-4fcb-a8c7-77c8f38030e8"
+        "outputId": "971ebf34-c826-4839-b0e8-bd2613a7771e"
       },
       "execution_count": 39,
       "outputs": [
@@ -1388,7 +1388,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "W0ilcRRnQTXV",
-        "outputId": "32342d1a-4500-43e3-d1ce-47e706dacd3d"
+        "outputId": "37cbaffb-5a73-4c28-bb07-0d53e6c552c7"
       },
       "execution_count": 40,
       "outputs": [
@@ -1476,7 +1476,7 @@
           "height": 35
         },
         "id": "bGNVqADZRFyi",
-        "outputId": "5faaf496-18cd-41ce-e5bd-4445fbc649a5"
+        "outputId": "dc29b76d-ed8f-4d3e-df1f-c37a3b68b613"
       },
       "execution_count": 43,
       "outputs": [
@@ -1505,7 +1505,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8peKGZZRRIFI",
-        "outputId": "26b70e2b-beb7-4bf8-fb4a-e825f27d1d31"
+        "outputId": "92aa44cc-7adf-43cb-a90e-5d6d25960d84"
       },
       "execution_count": 44,
       "outputs": [
@@ -1529,7 +1529,7 @@
           "height": 35
         },
         "id": "qVyUOW4iRLjw",
-        "outputId": "b4e1853b-50d8-4d33-a845-a1269ee88c3f"
+        "outputId": "9bb1abaa-3938-4ddb-e7c1-e64e3e2b590a"
       },
       "execution_count": 45,
       "outputs": [
@@ -1559,7 +1559,7 @@
           "height": 35
         },
         "id": "Na2AxDnURJa9",
-        "outputId": "f06d1afa-c8e0-493c-b30d-e8c2d76cbab1"
+        "outputId": "80e5c251-ca63-4f8d-a05f-0759fffb187d"
       },
       "execution_count": 46,
       "outputs": [
@@ -1681,7 +1681,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XgZgtLesSGQq",
-        "outputId": "f5ae8595-b5c2-412c-f57b-af4aeab89d4d"
+        "outputId": "76be011d-9ddf-4da4-d32d-61767cad80d1"
       },
       "execution_count": 50,
       "outputs": [
@@ -1704,7 +1704,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aTjMJomOSHt2",
-        "outputId": "0343dcf8-77c6-482e-889a-871590200f2a"
+        "outputId": "1214dd63-56a7-4e9b-9d32-ab4066b48fd7"
       },
       "execution_count": 51,
       "outputs": [
@@ -1728,7 +1728,7 @@
           "height": 35
         },
         "id": "A-l4Vn5nSJS4",
-        "outputId": "5662d331-8492-43d8-8b08-8ef9bd7fb698"
+        "outputId": "6f65b382-cc53-40b0-c331-042d1aa6e9ca"
       },
       "execution_count": 52,
       "outputs": [
@@ -1766,7 +1766,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "c7Cel-oBSQkL",
-        "outputId": "6102dcbe-9c5c-4f9a-ebc7-a0f3eedf8e8c"
+        "outputId": "811e1c8d-7b21-46ff-9d78-2e973ad28b21"
       },
       "execution_count": 53,
       "outputs": [
@@ -1793,8 +1793,8 @@
         "\n",
         "We can check class relationships using built-in functions:\n",
         "\n",
-        "- **issubclass(SubClass, ParentClass)**: returns True if SubClass inherits from ParentClass  \n",
-        "- **isinstance(object, Class)**: returns True if object is an instance of the given Class"
+        "- `issubclass(SubClass, ParentClass)`: returns `True` if `SubClass` inherits from `ParentClass`\n",
+        "- `isinstance(object, Class)`: returns `True` if object is an instance of the given Class"
       ],
       "metadata": {
         "id": "FlxUzBNhSZsH"
@@ -1813,7 +1813,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-zM2BSEOSeT-",
-        "outputId": "f681c5d8-7bf7-4ed1-8ecb-269ed146307d"
+        "outputId": "af30da45-40c7-46b7-f55e-48157e194ac2"
       },
       "execution_count": 54,
       "outputs": [
@@ -1873,7 +1873,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d8bd7805-fc49-4ca1-a5ee-80f12651b277"
+        "outputId": "716330af-fda5-4945-d3bf-5a3522ffe098"
       },
       "execution_count": 55,
       "outputs": [
@@ -1952,7 +1952,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3C0oXtaeDe7S",
-        "outputId": "e2e634ae-55c9-4d5e-84f1-fdf0cf08caa8"
+        "outputId": "006b2a24-aa0c-447a-97bc-7c3100370e0a"
       },
       "execution_count": 58,
       "outputs": [
@@ -2042,9 +2042,10 @@
         "        self.y = y\n",
         "\n",
         "    def __add__(self, other):    # this method is called when the + operator is used on an object of this class\n",
-        "        return Vector(self.x + other.x, self.y + other.y)\n",
+        "        if isinstance(other, Vector):\n",
+        "            return Vector(self.x + other.x, self.y + other.y)\n",
         "\n",
-        "    def __repr__(self):    # this method is called when print() is called on an object of this class\n",
+        "    def __str__(self):    # this method is called when print() is called on an object of this class\n",
         "        return f\"Vector({self.x}, {self.y})\""
       ],
       "metadata": {
@@ -2065,7 +2066,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XPQQbk-4IwB8",
-        "outputId": "677eb2f2-b5ba-4700-ae69-296dee7ca1fc"
+        "outputId": "0bab12f9-b089-4661-87f3-70065063c8ff"
       },
       "execution_count": 60,
       "outputs": [
@@ -2086,6 +2087,44 @@
       "metadata": {
         "id": "w-ic0ZLSI1g1"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Common Operator Overloading Methods:\n",
+        "- `__add__(self, other)`: `+`\n",
+        "- `__sub__(self, other)`: `-`\n",
+        "- `__mul__(self, other)`: `*`\n",
+        "- `__truediv__(self, other)`: `/`\n",
+        "- `__floordiv__(self, other)`: `//`\n",
+        "- `__mod__(self, other)`: `%`\n",
+        "- `__pow__(self, other)`: `**`\n",
+        "\n",
+        "Comparison Operators:\n",
+        "- `__eq__(self, other)`: `==`\n",
+        "- `__ne__(self, other)`: `!=`\n",
+        "- `__lt__(self, other)`: `<`\n",
+        "- `__le__(self, other)`: `<=`\n",
+        "- `__gt__(self, other)`: `>`\n",
+        "- `__ge__(self, other)`: `>=`\n",
+        "\n",
+        "Other Useful Methods:\n",
+        "- `__len__(self)`: `len()` function\n",
+        "- `__str__(self)`: `str()` function or `print()` function (for printing to end-users, not developers)\n",
+        "- `__repr__(self)`: `repr()` function (for developer-friendly representation, often valid Python code that could recreate the object)"
+      ],
+      "metadata": {
+        "id": "G2ylkO-s1884"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Gn_r68Md7PU1"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
